<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_grapes"
        android:icon="@drawable/navigation_grapes"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sortable"
        android:icon="@drawable/drawer_ic_filter"
        android:title="@string/title_sortable" />

    <item
        android:id="@+id/navigation_region"
        android:icon="@drawable/drawer_ic_thermometer"
        android:title="@string/title_region" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/drawer_ic_gallery"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/drawer_ic_settings"
        android:title="@string/title_settings"/>
</menu>
